-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0-rc1
-
None
-
macOS 10.12
When I've got an iOS device connected, it can happen that when I load a session, that Qt Creator crashes:
Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000000 Exception Note: EXC_CORPSE_NOTIFY Termination Signal: Segmentation fault: 11 Termination Reason: Namespace SIGNAL, Code 0xb Terminating Process: exc handler [0] VM Regions Near 0: --> __TEXT 0000000101177000-000000010118a000 [ 76K] r-x/rwx SM=COW /Users/USER/*/Qt Creator.app/Contents/MacOS/Qt Creator Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libProjectExplorer.dylib 0x000000010bfa4206 ProjectExplorer::Internal::ProjectWindowPrivate::updatePanel() + 38 1 libProjectExplorer.dylib 0x000000010bfa4c17 ProjectExplorer::Internal::ProjectItem::setData(int, QVariant const&, int) + 215 2 libProjectExplorer.dylib 0x000000010bff8a51 ProjectExplorer::Internal::TargetGroupItemPrivate::rebuildContents() + 401 3 org.qt-project.QtCore 0x00000001020cd9cb QMetaObject::activate(QObject*, int, int, void**) + 731 4 libProjectExplorer.dylib 0x000000010c12908f ProjectExplorer::KitManager::kitUpdated(ProjectExplorer::Kit*) + 63 5 libProjectExplorer.dylib 0x000000010bfaf61c ProjectExplorer::Kit::kitUpdated() + 76 6 libProjectExplorer.dylib 0x000000010bfc1bfe ProjectExplorer::DeviceKitInformation::deviceUpdated(Core::Id) + 206 7 org.qt-project.QtCore 0x00000001020cd9cb QMetaObject::activate(QObject*, int, int, void**) + 731 8 libProjectExplorer.dylib 0x000000010c137c6f ProjectExplorer::DeviceManager::deviceUpdated(Core::Id) + 63 9 libProjectExplorer.dylib 0x000000010c0db6b4 ProjectExplorer::DeviceManager::addDevice(QSharedPointer<ProjectExplorer::IDevice const> const&) + 1060 10 libIos.dylib 0x000000010ebb574b Ios::Internal::IosDeviceManager::deviceConnected(QString const&, QString const&) + 683 11 libIos.dylib 0x000000010ebb7282 deviceConnectedCallback + 530 12 libIos.dylib 0x000000010ebb7ca4 Ios::Internal::IosDeviceManager::monitorAvailableDevices() + 340 13 org.qt-project.QtCore 0x00000001020d6416 QSingleShotTimer::timerEvent(QTimerEvent*) + 134 14 org.qt-project.QtCore 0x00000001020c6aa0 QObject::event(QEvent*) + 48 15 org.qt-project.QtWidgets 0x00000001013f3c2d QApplicationPrivate::notify_helper(QObject*, QEvent*) + 269 16 org.qt-project.QtWidgets 0x00000001013f64fc QApplication::notify(QObject*, QEvent*) + 5852 17 org.qt-project.QtCore 0x000000010209d144 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164 18 org.qt-project.QtCore 0x00000001020f3666 QTimerInfoList::activateTimers() + 1142 19 libqcocoa.dylib 0x00000001042d6b5c QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 1580 20 libProjectExplorer.dylib 0x000000010c018f80 ProjectExplorer::SessionManager::loadSession(QString const&) + 3184 21 libProjectExplorer.dylib 0x000000010c1146b1 ProjectExplorer::Internal::SessionModel::switchToSession(QString const&) + 17 22 libProjectExplorer.dylib 0x000000010c110947 ProjectExplorer::Internal::SessionDelegate::editorEvent(QEvent*, QAbstractItemModel*, QStyleOptionViewItem const&, QModelIndex const&) + 615 23 org.qt-project.QtWidgets 0x00000001016653d7 QAbstractItemViewPrivate::sendDelegateEvent(QModelIndex const&, QEvent*) const + 647 24 org.qt-project.QtWidgets 0x00000001016687b8 QAbstractItemView::edit(QModelIndex const&, QAbstractItemView::EditTrigger, QEvent*) + 216 25 org.qt-project.QtWidgets 0x0000000101664efe QAbstractItemView::mouseReleaseEvent(QMouseEvent*) + 494 26 org.qt-project.QtWidgets 0x00000001016ab419 QTreeView::mouseReleaseEvent(QMouseEvent*) + 345 27 org.qt-project.QtWidgets 0x000000010142deb6 QWidget::event(QEvent*) + 1670 28 org.qt-project.QtWidgets 0x000000010152335d QFrame::event(QEvent*) + 45 29 org.qt-project.QtWidgets 0x00000001015ac513 QAbstractScrollArea::viewportEvent(QEvent*) + 179 30 org.qt-project.QtWidgets 0x0000000101663df6 QAbstractItemView::viewportEvent(QEvent*) + 1526 31 org.qt-project.QtWidgets 0x00000001016a7be1 QTreeView::viewportEvent(QEvent*) + 513 32 org.qt-project.QtWidgets 0x00000001015ad0c5 QAbstractScrollAreaFilter::eventFilter(QObject*, QEvent*) + 37 33 org.qt-project.QtCore 0x000000010209d3da QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) + 202 34 org.qt-project.QtWidgets 0x00000001013f3c18 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 248 35 org.qt-project.QtWidgets 0x00000001013f71c3 QApplication::notify(QObject*, QEvent*) + 9123 36 org.qt-project.QtCore 0x000000010209d144 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164 37 org.qt-project.QtWidgets 0x00000001013f4557 QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) + 871 38 org.qt-project.QtWidgets 0x000000010144e5cb QWidgetWindow::handleMouseEvent(QMouseEvent*) + 1387 39 org.qt-project.QtWidgets 0x000000010144d60f QWidgetWindow::event(QEvent*) + 175 40 org.qt-project.QtWidgets 0x00000001013f3c2d QApplicationPrivate::notify_helper(QObject*, QEvent*) + 269 41 org.qt-project.QtWidgets 0x00000001013f64fc QApplication::notify(QObject*, QEvent*) + 5852 42 org.qt-project.QtCore 0x000000010209d144 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164 43 org.qt-project.QtGui 0x00000001019d5e07 QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 2855 44 org.qt-project.QtGui 0x00000001019bd5cb QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 155 45 libqcocoa.dylib 0x00000001042d7ef1 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33 46 com.apple.CoreFoundation 0x00007fff8ee113c1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 47 com.apple.CoreFoundation 0x00007fff8edf22cd __CFRunLoopDoSources0 + 557 48 com.apple.CoreFoundation 0x00007fff8edf17c6 __CFRunLoopRun + 934 49 com.apple.CoreFoundation 0x00007fff8edf11c4 CFRunLoopRunSpecific + 420 50 com.apple.HIToolbox 0x00007fff8e352ebc RunCurrentEventLoopInMode + 240 51 com.apple.HIToolbox 0x00007fff8e352bf9 ReceiveNextEventCommon + 184 52 com.apple.HIToolbox 0x00007fff8e352b26 _BlockUntilNextEventMatchingListInModeWithFilter + 71 53 com.apple.AppKit 0x00007fff8c8ede24 _DPSNextEvent + 1120 54 com.apple.AppKit 0x00007fff8d06985e -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 2796 55 com.apple.AppKit 0x00007fff8c8e27ab -[NSApplication run] + 926 56 libqcocoa.dylib 0x00000001042d6d8f QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2143 57 org.qt-project.QtCore 0x0000000102098e91 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 401 58 org.qt-project.QtCore 0x000000010209d7b5 QCoreApplication::exec() + 341 59 org.qt-project.qtcreator 0x00000001011836b0 main + 15792 60 libdyld.dylib 0x00007fffa4554235 start + 1
It looks like the event loop processing during loading the session handles the device update timer event, which then tries to update something that is currently in a non-expected state because the session is loaded.
- duplicates
-
QTCREATORBUG-17470 Crash on start with iPhone connected
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-18226 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
195459,2 | iOS: Fix crash on startup when a device is connected | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |