iOS: Fix crash on startup when a device is connected

In a rare but plausible scenario panel might be updated on device
connection while project is not yet loaded. The panel update will
happen again when project loading is complete.

Task-number: QTCREATORBUG-18226
Change-Id: I566e2d23adee529f0536ae644cef420c66578d54
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>